# DepthDataApplication

./: CMakeLists.txt  DepthCNN.ipynb  README.md
collectionPipeline/: README.md  recording.out
data/: README.md
src/: getFrames.cpp  temp.cpp
